<resources>
    <string name="app_name">Roximal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tap_to_connect">Tap to connect to device</string>
    <string name="send">Send</string>
    <string name="title_activity_view_incidents">Incidents</string>
    <string name="btn_back">Back</string>
    <string name="btn_view_incidents">View Data</string>
    <string name="reset_db">Reset Database</string>
    <string name="send_data">Send Data</string>
    <string name="view_map">Map</string>
    <string name="title_activity_map">Map of Incidents</string>
    <string name="month">Month:</string>
    <string name="day">Day:</string>
    <string name="question_mark">\?</string>
    <string name="instructions_text">Instructions</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="instructions">The app should connect automatically to the device, if it doesn\'t you can the button at
        the bottom of the main screen.\n\n
    When connected, if the device detects an object within a close proximity the phone will vibrate to alert you.\n\n
    When that happens it will store data about the incident which can be viewed on a map or you can see the raw data.\n\n
    You can tap incidents on the map to view more information about them as well as delete incidents and sort by date at the top of the map.\n\n
    You can send the data you\'ve collected to the Dunedin City Council under the View Data page.</string>
    <string name="incident_info">Incident Info:</string>
    <string name="vehicle_distance">Vehicle Distance:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="delete_incident">Delete Incident</string>
    <string name="close">Close</string>
</resources>
