<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#66BFB7">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/month"
            android:id="@+id/textView3"
            android:textSize="25dp"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_marginLeft="10px"/>

        <Spinner
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinIncidentMonth"
            android:layout_marginLeft="10px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day"
            android:id="@+id/textView4"
            android:textSize="25dp"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_marginLeft="20px"/>

        <Spinner
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinIncidentDay"
            android:layout_marginLeft="10px"/>
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/incidentList"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:id="@+id/btnBack"
                android:background="#66BFB7"
                android:paddingLeft="50px"
                android:paddingRight="50px"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_data"
                android:id="@+id/btnSendData"
                android:background="#66BFB7"
                android:paddingLeft="50px"
                android:paddingRight="50px"
                android:layout_gravity="right"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
